--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -123,9 +123,10 @@
     <div id="errorToast" class="toast align-items-center text-bg-danger border-0" role="alert" aria-live="assertive"
          aria-atomic="true">
         <div class="d-flex align-items-center">
-            alt="avatar"
-            class="rounded-circle me-2"
-            style="width:30px; height:30px; animation: shake 0.6s ease-in-out 2;">
+            <img src="/cat.png"
+                 alt="avatar"
+                 class="rounded-circle me-2"
+                 style="width:30px; height:30px; animation: shake 0.6s ease-in-out 2;">
             <div class="toast-body" id="toastMessage">خطا رخ داده است</div>
             <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
                     aria-label="Close"></button>
