--- a/src/main/resources/templates/theNewestTests.html
+++ b/src/main/resources/templates/theNewestTests.html
@@ -149,6 +149,11 @@
             font-size: 18px;
         }
     </style>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+
 </head>
 <body>
 <!-- هدر -->
@@ -170,7 +175,7 @@
 <!--  .محتوای اصلی -->
 <main>
     <h1>جدیدترین آزمون‌ها</h1>
-    <div class="exam-grid">
+    <div class="exam-grid" id="allCart">
         <div class="exam-card">
             <div class="exam-title"><span class="exam-icon">📝</span> آزمون ریاضی</div>
             <div class="exam-info"><span class="exam-icon">⭐️</span> سختی: سخت</div>
@@ -238,6 +243,28 @@
     function toggleTheme() {
         document.body.classList.toggle("light");
     }
+
+    function renderCart(res) {
+        let tbody = document.getElementById("allCart");
+        tbody.innerHTML = "";
+        for (let i = 0; i < res.length; i++) {
+            let row = document.createElement("tr");
+            row.setAttribute("data-id", res[i].id);
+            row.innerHTML = `
+            <div class="exam-card">
+                <div class="exam-title"><span class="exam-icon">📝</span> ${res[i].name}</div>
+                <div class="exam-info"><span class="exam-icon">⭐️</span> سختی: ${res[i].levelTitle} </div>
+                <div class="exam-info"><span class="exam-icon">⏰</span> زمان ایجاد: ${res[i].creationDate}</div>
+                <div><a href="https://localhost:8083/startExam?${res[i].id}" class="btn btn-primary">شروع آزمون</a></div>
+            </div>
+        `;
+            tbody.appendChild(row);
+        }
+    }
+
+    fetch("http://localhost:8083/exams")
+        .then(res => res.json())
+        .then(res => renderCart(res))
 </script>
 </body>
 </html>
